--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
