--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.21.3",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.0",
